# NLP

./: .gitignore  Elijah_F1_1_HuggingFace.ipynb  Elijah_F1_2_DataEvaluation.ipynb  Elijah_F1_3_RougeSummarization.ipynb  Elijah_F1_Applied Exploration.ipynb  Elijah_F1_AppliedExploration.ipynb  Elijah_F1_Demo.ipynb  Elijah_F2_1_MoreOnDatasets.ipynb  Elijah_F2_2_SummarizationTranslationQuestionAnswering.ipynb  Elijah_F2_4_MarkovModel.ipynb  Elijah_F2_Demo.ipynb  Elijah_F3_2_AutoTokenization.ipynb  Elijah_F3_3_HMMPOS.ipynb  Elijah_F4_1_WordNet.ipynb  Elijah_F4_2_WordSenseDisambiguation.ipynb  Elijah_F4_3_ContextFreeGrammars.ipynb  Elijah_F4_Demo_WordNetExplorerGUI.py  Elijah_F5_1_Parsing.ipynb  Elijah_F5_2_MachineLearning.ipynb  Elijah_F5_3_NeuralNetworks.ipynb  Elijah_F5_4_Embeddings.ipynb  Elijah_F6_1_NeuralLanguageModeling.ipynb  Elijah_F6_2_RecurrentNeuralNetworks.ipynb  Elijah_F6_3_EncoderDecoder.ipynb  Elijah_F6_4_LongTermRecurrence.ipynb  Elijah_F7_1_TransferLearning.ipynb  Elijah_F7_2_AttentionTransformers.ipynb  Elijah_F7_3_ConversationalModels.ipynb  README.md  pyproject.toml  sampl  sample.py  test.js
.ipynb_checkpoints/: Elijah_F1_1_HuggingFace-checkpoint.ipynb
original_notebooks/: F2_3_QuestionAnswering.ipynb
