[tool.poetry]
name = "nlp-local"
version = "0.1.0"
description = ""
authors = ["elilueders <elilueders@gmail.com>"]
readme = "README.md"
packages = [{include = "nlp_local"}]

[tool.poetry.dependencies]
python = "^3.10"
black = {extras = ["jupyter"], version = "^23.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
