[tool.poetry]
name = "nlp-local"
version = "0.1.0"
description = ""
authors = ["elilueders <elilueders@gmail.com>"]
readme = "README.md"
packages = [{include = "nlp_local"}]

[tool.poetry.dependencies]
python = "^3.10"
black = {extras = ["jupyter"], version = "^23.7.0"}
matplotlib = "^3.7.2"
evaluate = "^0.4.0"
rouge-score = "^0.1.2"
sentencepiece = "^0.1.99"
sacremoses = "^0.0.53"
scikit-learn = "^1.3.1"
nltk = "^3.8.1"
keras = "^2.14.0"
transformers = "^4.35.2"
datasets = "^2.14.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
